--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -38,6 +38,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'rubikblack', sans-serif;
+  font-weight: bold
 }
 
 header {
@@ -46,4 +48,14 @@ header {
 
 hr {
   clear:both;
+}
+
+h1 {
+  font-family: 'rubikblack', sans-serif;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: 'rubikblack_italic', sans-serif;
 }
