Changed the About page and made minor font changes

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -58,12 +58,14 @@ h1 {
 
 h2 {
   font-family: 'rubikblack_italic', sans-serif;
+  font-size: 20px;
+
 }
 
 .next-quote {
   color:#f84342;
   font-family: 'rubikblack_italic', sans-serif;
-  fony-size: 20px;
+  font-size: 20px;
 }
 
 .footer-blurb {
@@ -93,7 +95,7 @@ h2 {
 
 h2 span {
   color: #dddddd;
-  font-family: 'rubikblack', sans-serif;
+  font-family: 'rubikblack_italic', sans-serif;
 }
 
 ::selection {
