--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -2,11 +2,11 @@
   <h1>About Splurty</h1>
 
   <p>
-    Splurty was built by <a target="_blank" href="http://github.com/MattArrick">Matt Arrick</a>. A web developer who is on a mission to give people the technical skills needed to launch their own MVPs and turn ideas into reality.
+    Splurty is a random quote generator built by <a target="_blank" href="http://github.com/MattArrick">Matt Arrick</a>, an aspiring web developer who is excited to be expanding his coding skills.
   </p>
-  <br />
+  <!-- <br /> -->
   <p>
-    He taught hundreds of students how to code and build products people want at places like Harvard Business School, Carnegie Mellon, Babson, Rhode Island School of Design, Brown University, Punohou High School and ‘Iolani High School.
+    He is learning how to build websites and apps using CSS, HTML and Ruby on Rails and thoroughly enjoying the experience.
   </p>
   <p>
     If you want to learn how to code - start <a target="_blank" href="https://online.bootcampspot.com"> here</a>.
@@ -21,8 +21,8 @@
       <h2 class="text-center">Matt Arrick</h2>
       <br />
       <p>
-        Matt Arrick is a web developer and user experience product manager. He consulted Fortune 500 companies like P&G and John Deere, won Boston's biggest Hackathon (<a target="_blank" href="http://www.angelhack.com/">Angelhack</a>) and most recently led the user experience for <a target="_blank" href="https://www.peertransfer.com/">peerTransfer</a>, building a $500M/year international tuition payment platform. In an earlier life, he travelled around the world on <a target="_blank" href="http://25dollartravel.com">$25/day</a> for an entire year.
-      </p>
+        Matt Arrick is a self-taught I.T. professional and an aspiring web developer.  He is currently enrolled at the <a target="_blank" href="https://www.du.edu/">University of Denver</a> in their <a target="_blank" href="https://online.bootcampspot.com/">Online Programming Bootcamp</a>.  He is excited to be on this educational journey and looks forward to the opportunites that will come with it.  In his free time, Matt enjoys hiking with his wife and has climbed a number of <a target="_blank" href="https://www.14ers.com/">"14ers"</a> near his home in Colorado.
+        </p>
     </div>
   </div>
   <br class="clear" />
