--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -2,6 +2,9 @@
   <span>SPLURTY / No. <%= @quote.id %> </span>
   Here's the <u>best unsolicited startup advice </u> you can get!
 </h2>
+<br class="clear" />
+<br />
+
 
 <h1><%= @quote.saying %></h1>
 <h2 class="float-right">- <%= @quote.author %></h2>
