Changed the About page and made minor font changes

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -21,7 +21,7 @@
       <h2 class="text-center">Matt Arrick</h2>
       <br />
       <p>
-        Matt Arrick is a self-taught I.T. professional and an aspiring web developer.  He is currently enrolled at the <a target="_blank" href="https://www.du.edu/">University of Denver</a> in their <a target="_blank" href="https://online.bootcampspot.com/">Online Programming Bootcamp</a>.  He is excited to be on this educational journey and looks forward to the opportunites that will come with it.  In his free time, Matt enjoys hiking with his wife and has climbed a number of <a target="_blank" href="https://www.14ers.com/">"14ers"</a> near his home in Colorado.
+        Matt Arrick is a self-taught I.T. professional and an aspiring web developer.  He is currently enrolled at the <a target="_blank" href="https://www.du.edu/">University of Denver</a> in their <a target="_blank" href="https://online.bootcampspot.com/">Online Programming Bootcamp</a>.  He is excited to be on this educational journey and looks forward to the opportunites that will come with it.  In his free time, Matt enjoys hiking with his wife and has climbed a number of <a target="_blank" href="https://www.14ers.com/">"14-ers"</a> near his home in Colorado.
         </p>
     </div>
   </div>
